@@ -1,3 +1,13 @@
+2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Fixed an annoying bug in the locale selection.
+	  Punjabi was twice in our internal list which makes
+	  it impossible to access locale after Portuguese in
+	  our list. It was possible to access locale by going
+	  backward but really annoying.
+
+	* src/gcompris/config.c:
+
 2009-03-12  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Fixed a crash case by Miguel in the configuration.
